--- a/softdevfinals/static/css/home.css
+++ b/softdevfinals/static/css/home.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #333; /* Dark background */
-    color: #fff; /* Light text */
+    background-color: #343131; /* Dark background */
+    color: #f6e7d8; /* Light text */
 }
 
 .navbar {
