--- a/softdevfinals/templates/accounts/change_password.html
+++ b/softdevfinals/templates/accounts/change_password.html
@@ -7,6 +7,7 @@
     <title>Change Password</title>
 </head>
 <body>
+    {% include 'nav.html' %}
     <div class="container mt-5">
         <a href="{% url 'profile' %}" class="btn btn-danger">Go back</a>
 
