--- a/softdevfinals/templates/accounts/profile.html
+++ b/softdevfinals/templates/accounts/profile.html
@@ -7,79 +7,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
-    
+    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="text-center mb-4"></div>
-        <img src="{% static 'css/logo.png' %}" alt="Logo" class="logo" />
-       </div>
-       <a class="nav-link" href="{% url 'home' %}">Share Mo lang</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'recipe-create' %}">Create New Recipe</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-danger" href="{% url 'logout' %}">Logout</a>
-                </li>
-            </ul>
+    {% include 'nav.html' %}
+
+    <div class="container mt-5" style="max-width: 100%; width: 55%;">
+        <div class="row d-flex align-items-center">
+            <div class="col-12 col-md-9 d-flex align-items-start flex-column flex-md-row"> <!-- Stack on mobile -->
+                <!-- Custom Card for Profile Information -->
+                <div class="card custom-card w-100 mb-3"> <!-- Add margin bottom for spacing -->
+                    <div class="card-body d-flex align-items-start">
+                        <!-- Picture -->
+                        <div class="profile-image">
+                            <img src="{{ user.profile.image.url }}" style="max-width: 10rem;" alt="Profile Picture" class="img-fluid">
+                        </div>
+                        <!-- Username and Bio -->
+                        <div class="ml-4">
+                            <h1 class="card-title">{{ user.username }}</h1>
+                            {% if user.profile.bio %}
+                                <p class="card-text">{{ user.profile.bio }}</p>
+                            {% else %}
+                                <p class="card-text">No bio yet</p>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>   
+            <div class="col-sm-3">
+                <div class="mt-3">
+                    <a href="{% url 'update_user' %}" class="btn custom-btn w-100 mb-2">Edit Information</a>
+                    <a href="{% url 'update_profile' %}" class="btn custom-btn w-100 mb-2">Edit Profile</a>
+                    <a href="{% url 'change_password' %}" class="btn custom-btn w-100 mb-2">Change Password</a>
+                </div>
+            </div>
         </div>
-    </nav>
 
-    <h1>{{ user.username }}</h1>
-    <img src="{{ user.profile.image.url }}" style="max-width: 100px;">
-    
-    {% if user.profile.bio %}
-        <h2>{{ user.profile.bio }}</h2>
-    {% else %}
-        <h2>No bio yet</h2>
-    {% endif %}
-    <div class="mt-3">
-        <a href="{% url 'update_user' %}" class="btn btn-primary">Update User Information</a>
-        <a href="{% url 'update_profile' %}" class="btn btn-secondary">Update Profile</a>
-        <a href="{% url 'change_password' %}" class="btn btn-secondary">Change Password</a>
+        <!-- Display user's recipes -->
+        <div style="margin-top: 2rem;">
+            <div class="row mt-3">
+                {% for recipe in user_recipes %}
+                    <div class="col-12 col-md-4 mb-3">
+                        <div class="card custom-recipe-card w-100" style="border-radius: .5rem;">
+                            <div class="card-body">
+                                <!-- Recipe Name -->
+                                <h3 class="mb-2 text-center card-title">{{ recipe.name }}</h3>
+                                <!-- Recipe Picture -->
+                                {% if recipe.image %}
+                                    <a href="{% url 'recipe-detail' recipe.id %}">
+                                        <img src="{{ recipe.image.url }}" alt="{{ recipe.name }}" class="card-img-top img-fluid" style="border-radius: .5rem;">
+                                    </a>
+                                {% endif %}
+                                <!-- Ingredients -->
+                                <p class="card-text"><strong>Ingredients:</strong> {{ recipe.ingredients }}</p>
+                                <!-- Cooking Time -->
+                                <p class="card-text"><strong>Cooking Time:</strong> {{ recipe.minutes }} minutes</p>
+                                <!-- Display the average rating -->
+                                {% if recipe.average_rating %}
+                                    <p class="card-text"><strong>Average Rating:</strong> {{ recipe.average_rating|floatformat:1 }} / 5</p>
+                                {% else %}
+                                    <p class="card-text"><strong>Average Rating:</strong> No ratings yet</p>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                {% empty %}
+                    <div class="col-12">
+                        <div class="list-group-item">No recipes yet.</div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        
     </div>
-
-    <!-- Display user's recipes -->
-    <h3>Recipes by {{ user.username }}:</h3>
-    <ul>
-        {% for recipe in user_recipes %}
-        <li class="list-group-item">
-            <h5>{{ recipe.name }}</h5>
-            {% if recipe.image %}
-                <a href="{% url 'recipe-detail' recipe.id %}">
-                    <img src="{{ recipe.image.url }}" alt="{{ recipe.name }}" style="max-width: 100px;">
-                </a>
-            {% endif %}
-            <p><strong>Ingredients:</strong> {{ recipe.ingredients }}</p>
-            <p><strong>Cooking Time:</strong> {{ recipe.minutes }} minutes</p>
-            {% if recipe.user %}
-                <p><strong>Created By:</strong> {{ recipe.user.username }}</p>
-            {% else %}
-                <p><strong>Created By:</strong> Unknown</p>
-            {% endif %}
-
-            <!-- Display the average rating -->
-            {% if recipe.average_rating %}
-                <p><strong>Average Rating:</strong> {{ recipe.average_rating|floatformat:1 }} / 5</p>
-            {% else %}
-                <p><strong>Average Rating:</strong> No ratings yet</p>
-            {% endif %}
-        </li>
-        {% empty %}
-            <li>No recipes yet.</li>
-        {% endfor %}
-    </ul>
-
-    <!-- Button links for updating user and profile -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
