--- a/softdevfinals/templates/accounts/profile_edit_user.html
+++ b/softdevfinals/templates/accounts/profile_edit_user.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 {% load crispy_forms_tags %}
+
 <html lang="en">
+    {% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
 </head>
 <body>
-    <a href="{% url 'profile' %}" class="btn btn-danger">Go back</a>
-    <h2>Update User Information</h2>
-    <form method="POST">
-        {% csrf_token %}
-        {{ u_form.as_p }}
-        <button type="submit">Update</button>
-    </form>
+    {%include 'nav.html'%}
+    <div  class="container-fluid full-height">
+        
+        <div class="box-container p-4 mt-4">
+            <h3 style="color: black;">Update User Information</h3>
+            <form method="POST" class="form" style="color: black;">
+                {% csrf_token %}
+                {{ u_form.as_p }}
+        
+                <div class="d-flex justify-content-between mt-3">
+                    <a href="{% url 'profile' %}" class="btn btn-danger" style="font-weight: bold;">Go back</a>
+                    <button type="submit" class="btn custom-btn">Update</button>
+                </div>
+            </form>
+        </div>
+        
+    </div>
+    
+    
 
         
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
