--- a/softdevfinals/templates/recipes/recipe_form.html
+++ b/softdevfinals/templates/recipes/recipe_form.html
@@ -10,28 +10,7 @@
     {% load crispy_forms_tags %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="text-center mb-4"></div>
-        <img src="{% static 'css/logo.png' %}" alt="Logo" class="logo" />
-       </div>
-       <a class="nav-link" href="{% url 'home' %}">Share Mo Lang</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'recipe-create' %}">Create New Recipe</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-danger" href="{% url 'logout' %}">Logout</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    {% include 'nav.html' %}
     <div class="container mt-5">
         <h2>Create a New Recipe</h2>
         <form method="POST" enctype="multipart/form-data">
